--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>mx.com.gm</groupId>
-	<artifactId>holaSpring</artifactId>
+	<artifactId>spring-thymeleaf-U</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>holaSpring</name>
+	<name>spring-thymeleaf-U</name>
 	<description>Hello project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
